--- a/MQ2EasyFind.vcxproj.filters
+++ b/MQ2EasyFind.vcxproj.filters
@@ -28,5 +28,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" />
+    <None Include="config\MQ2EasyFind.yaml">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
