Split EasyFind up into multiple source files

--- a/MQ2EasyFind.vcxproj
+++ b/MQ2EasyFind.vcxproj
@@ -65,9 +65,14 @@
     <_ProjectFileVersion>10.0.30319.1</_ProjectFileVersion>
   </PropertyGroup>
   <ItemGroup>
-    <ClCompile Include="MQ2EasyFind.cpp" />
+    <ClCompile Include="EasyFind.cpp" />
+    <ClCompile Include="EasyFindConfiguration.cpp" />
+    <ClCompile Include="EasyFindImGui.cpp" />
+    <ClCompile Include="EasyFindNavigation.cpp" />
+    <ClCompile Include="EasyFindZonePath.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="EasyFind.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
