--- a/MQ2EasyFind.vcxproj
+++ b/MQ2EasyFind.vcxproj
@@ -73,6 +73,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EasyFind.h" />
+    <ClInclude Include="EasyFindConfiguration.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
