--- a/MQ2EasyFind.vcxproj.filters
+++ b/MQ2EasyFind.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="EasyFindNavigation.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="EasyFindZoneConnections.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
@@ -45,6 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="EasyFindWindow.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="EasyFindZoneConnections.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
