Add ability to disable connections in zone guide (#11)
Disables poknowledge -> airplane connection
Doesn't add new airplane connection to potranquility (requires reagent)

--- a/resources/EasyFind/ZoneConnections.yaml
+++ b/resources/EasyFind/ZoneConnections.yaml
@@ -1100,6 +1100,9 @@ FindLocations:
             switch: 25
             targetZone: arena
             replace: false
+        -   type: ZoneConnection
+            targetZone: airplane
+            remove: true
     potimea:
         -   type: Translocator
             name: Herald of Druzzil Ro
