--- a/resources/EasyFind/ZoneConnections.yaml
+++ b/resources/EasyFind/ZoneConnections.yaml
@@ -106,6 +106,11 @@ FindLocations:
             location: [1965, 1900, -864]
             targetZone: dranik
             identifier: 2
+    bloodmoon:
+        -   type: ZoneConnection
+            switch: OBJ_MAIN_BLOODMOONDOOR
+            targetZone: lopingplains
+            identifier: 4
     bothunder:
         -   type: ZoneConnection
             switch: 67
@@ -712,6 +717,10 @@ FindLocations:
         -   type: ZoneConnection
             switch: 21
             targetZone: corathus
+    lopingplains:
+        -   type: ZoneConnection
+            switch: OBJ_DOOR_BLDCOURTYRD
+            targetZone: bloodmoon
     maiden:
         -   type: ZoneConnection
             location: [-2290, 95, -160]
